RESOLVED FIXED18036
Rendering invalid japanese characters with pango backend.
https://bugs.webkit.org/show_bug.cgi?id=18036
Summary Rendering invalid japanese characters with pango backend.
Hiroyuki Ikezoe
Reported 2008-03-23 22:26:09 PDT
Rendering invalid Japanese characters with pango backend.
Attachments
a screenshot (45.88 KB, image/png)
2008-03-23 22:29 PDT, Hiroyuki Ikezoe
no flags
proposed patch (1.32 KB, patch)
2008-03-23 22:36 PDT, Hiroyuki Ikezoe
alp: review+
A screenshot after the patch was applied. (45.62 KB, image/png)
2008-03-23 22:36 PDT, Hiroyuki Ikezoe
no flags
Hiroyuki Ikezoe
Comment 1 2008-03-23 22:29:38 PDT
Created attachment 19995 [details] a screenshot The character at the left side of "nore" at the first line on the top of the page should be a downward triangle but a circle. All other Japanese characters are also invalid.
Hiroyuki Ikezoe
Comment 2 2008-03-23 22:36:11 PDT
Created attachment 19996 [details] proposed patch
Hiroyuki Ikezoe
Comment 3 2008-03-23 22:36:56 PDT
Created attachment 19997 [details] A screenshot after the patch was applied.
Alexey Proskuryakov
Comment 4 2008-03-23 23:07:37 PDT
To get the patch reviewed, please mark it as needing review by clicking Edit link to the right of it - this will ensure it will not get overlooked.
Alp Toker
Comment 5 2008-03-30 10:27:01 PDT
Landed in r31442.
Note You need to log in before you can comment on or make changes to this bug.