2008-03-30  Hiroyuki Ikezoe  <poincare@ikezoe.net>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18036
        Rendering invalid japanese characters with pango backend.

        * platform/graphics/gtk/FontPlatformDataPango.cpp:
        (FontPlatformData::FontPlatformData): Set PangoFontDescription for
        PangoContext explicitly to use proper font.


Canonical link: https://commits.webkit.org/25085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31442 268f45cc-cd09-0410-ab3c-d52691b4dbfc